@@ -16,8 +16,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- mod_perl_untaint($Apache::Server::CWD)
-
 - compat.h problem
 
 - mod_perl.pm + CPAN indexer
